# ort_app_server

./: .clang-format  CMakeLists.txt  README.md
src/: model_downloader.cc  model_downloader.h  model_manager.cc  model_manager.h  ort_app_server.cc  utils.h
test/: model_manifest.json  test_ort_app_server.py
